--- a/HospitalWPF/view_admin/areaAtuacao/cadastrarAreaAtuacao.xaml
+++ b/HospitalWPF/view_admin/areaAtuacao/cadastrarAreaAtuacao.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_admin.areaAtuacao"
         mc:Ignorable="d"
-        Title="cadastrarAreaAtuacao" Height="300" Width="300">
+        Title="Cadastrar Área de Atuação" Height="240" Width="480">
     <Grid>
-        
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="20,130,0,0" VerticalAlignment="Top" Width="120" Height="50" Click="btnSalvar_Click"/>
+        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Right" Margin="0,130,20,0" VerticalAlignment="Top" Width="120" Height="50" Click="btnCancelar_Click"/>
+        <Label Content="Área:" HorizontalAlignment="Left" Margin="20,24,0,0" VerticalAlignment="Top"/>
+        <Label Content="Valor:" HorizontalAlignment="Left" Margin="20,59,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtArea" HorizontalAlignment="Left" Height="23" Margin="136,26,0,0" TextWrapping="Wrap" Text="{Binding AreaAtuacao.Area}" VerticalAlignment="Top" Width="313"/>
+        <TextBox x:Name="txtValor" HorizontalAlignment="Left" Height="23" Margin="136,61,0,0" TextWrapping="Wrap" Text="{Binding AreaAtuacao.Valor}" VerticalAlignment="Top" Width="313"/>
+
     </Grid>
 </Window>
