--- a/HospitalWPF/view_admin/administrador/cadastrarAdmin.xaml
+++ b/HospitalWPF/view_admin/administrador/cadastrarAdmin.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_admin.admin"
         mc:Ignorable="d"
-        Title="cadastrarAdmin" Height="300" Width="300">
+        Title="Cadastrar Administrador" Height="270" Width="580">
     <Grid>
-        
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="20,165,0,0" VerticalAlignment="Top" Width="120" Height="50" Click="btnSalvar_Click"/>
+        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="430,165,0,0" VerticalAlignment="Top" Width="120" Height="50" Click="btnCancelar_Click"/>
+        <Label Content="Nome:" HorizontalAlignment="Left" Margin="20,24,0,0" VerticalAlignment="Top"/>
+        <Label Content="CPF:" HorizontalAlignment="Left" Margin="20,59,0,0" VerticalAlignment="Top"/>
+        <Label Content="Banco:" HorizontalAlignment="Left" Margin="20,95,0,0" VerticalAlignment="Top"/>
+        <Label Content="Telefone:" HorizontalAlignment="Left" Margin="294,96,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.115"/>
+        <Label Content="Data Nascimento:" HorizontalAlignment="Left" Margin="294,56,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="23" Margin="136,26,0,0" TextWrapping="Wrap" Text="{Binding Admin.Nome}" VerticalAlignment="Top" Width="414"/>
+        <TextBox x:Name="txtCpf" HorizontalAlignment="Left" Height="23" Margin="136,61,0,0" TextWrapping="Wrap" Text="{Binding Admin.Cpf}" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtTelefone" HorizontalAlignment="Left" Height="23" Margin="407,98,0,0" TextWrapping="Wrap" Text="{Binding Admin.Telefone}" VerticalAlignment="Top" Width="143"/>
+        <DatePicker x:Name="dateNasc" HorizontalAlignment="Left" Margin="407,61,0,0" SelectedDate="{Binding Admin.DataNasc}" VerticalAlignment="Top" Width="143"/>
+        <ComboBox x:Name="cbBanco" HorizontalAlignment="Left" Margin="136,98,0,0" VerticalAlignment="Top" Width="143" ItemsSource="{Binding Bancos}" SelectedValue="{Binding BancoSelecionado}"/>
     </Grid>
 </Window>
