--- a/HospitalWPF/view_admin/agendamento/cadastrarAgendamento.xaml
+++ b/HospitalWPF/view_admin/agendamento/cadastrarAgendamento.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_admin.agendamento"
         mc:Ignorable="d"
-        Title="cadastrarAgendamento" Height="300" Width="300">
+        Title="Agendar Consulta" Height="300" Width="600">
     <Grid>
-        
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnSalvar_Click"/>
+        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnCancelar_Click"/>
+        <Label Content="Paciente:" HorizontalAlignment="Left" Margin="20,24,0,0" VerticalAlignment="Top"/>
+        <Label Content="Médico:" HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top"/>
+        <Label Content="Data:" HorizontalAlignment="Left" Margin="20,76,0,0" VerticalAlignment="Top"/>
+        <Label Content="Administrador:" HorizontalAlignment="Left" Margin="20,105,0,0" VerticalAlignment="Top"/>
+        <Label Content="Turno do Médico:" HorizontalAlignment="Left" Margin="310,50,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.115"/>
+        <Label Content="Horário:" HorizontalAlignment="Left" Margin="310,77,0,0" VerticalAlignment="Top"/>
+
+        <ComboBox x:Name="cbPaciente" HorizontalAlignment="Left" Margin="136,26,0,0" VerticalAlignment="Top" Width="436" ItemsSource="{Binding Pacientes}" SelectedValue="{Binding PacienteSelecionado}"/>
+        <ComboBox x:Name="cbMedico" HorizontalAlignment="Left" Margin="136,54,0,0" VerticalAlignment="Top" Width="169" ItemsSource="{Binding Medicos}" SelectedValue="{Binding MedicoSelecionado}"/>
+        <ComboBox x:Name="cbTurno" HorizontalAlignment="Left" Margin="431,53,0,0" VerticalAlignment="Top" Width="141" SelectedValue="{Binding Agendamento.Medico.Turno}">
+            <ComboBoxItem Content="Díurno"/>
+            <ComboBoxItem Content="Noturno"/>
+            <ComboBoxItem Content="Madrugada"/>
+        </ComboBox>
+        <DatePicker x:Name="dateHorario" HorizontalAlignment="Left" Margin="431,78,0,0" SelectedDate="{Binding Horario}" VerticalAlignment="Top" Width="141"/>
+        <DatePicker x:Name="dateData" HorizontalAlignment="Left" Margin="136,79,0,0"  SelectedDate="{Binding Data}" VerticalAlignment="Top" Width="169"/>
+        <ComboBox x:Name="cbAdmin" HorizontalAlignment="Left" Margin="136,109,0,0" VerticalAlignment="Top" Width="436" ItemsSource="{Binding Admins}" SelectedValue="{Binding AdminSelecionado}"/>
     </Grid>
 </Window>
