--- a/HospitalWPF/view_admin/consulta/cadastrarConsulta.xaml
+++ b/HospitalWPF/view_admin/consulta/cadastrarConsulta.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_admin.consulta"
         mc:Ignorable="d"
-        Title="cadastrarConsulta" Height="300" Width="300">
+        Title="Realizar Consulta" Height="300" Width="600">
     <Grid>
-        
+        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnSalvar_Click"/>
+        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnCancelar_Click"/>
+        <Label Content="Paciente:" HorizontalAlignment="Left" Margin="20,24,0,0" VerticalAlignment="Top"/>
+        <Label Content="Médico:" HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top"/>
+        <Label Content="Agendamento:" HorizontalAlignment="Left" Margin="310,105,0,0" VerticalAlignment="Top"/>
+        <Label Content="Horário:" HorizontalAlignment="Left" Margin="310,77,-71,0" VerticalAlignment="Top"/>
+        <Label Content="Data" HorizontalAlignment="Left" Margin="20,81,0,0" VerticalAlignment="Top"/>
+        <Label Content="Valor" HorizontalAlignment="Left" Margin="20,105,0,0" VerticalAlignment="Top"/>
+
+        <ComboBox x:Name="cbPaciente" HorizontalAlignment="Left" Margin="136,26,-280,0" VerticalAlignment="Top" Width="436" ItemsSource="{Binding Pacientes}" SelectedValue="{Binding PacienteSelecionado}"/>
+        <ComboBox x:Name="cbMedico" HorizontalAlignment="Left" Margin="136,54,0,0" VerticalAlignment="Top" Width="436" ItemsSource="{Binding Medicos}" SelectedValue="{Binding MedicoSelecionado}"/>
+        <DatePicker x:Name="dateHorario" HorizontalAlignment="Left" Margin="431,78,-280,0" SelectedDate="{Binding Horario}" VerticalAlignment="Top" Width="141"/>
+        <DatePicker x:Name="dateData" HorizontalAlignment="Left" Margin="136,79,-13,0"  SelectedDate="{Binding Data}" VerticalAlignment="Top" Width="169"/>
+        <ComboBox x:Name="cbAgendamento" HorizontalAlignment="Left" Margin="431,109,0,0" VerticalAlignment="Top" Width="141" ItemsSource="{Binding Agendamentos}" SelectedValue="{Binding AgendamentoSelecionado}"/>
+        <TextBox x:Name="txtValor" HorizontalAlignment="Left" Height="23" Margin="136,109,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169"/>
     </Grid>
 </Window>
