--- a/HospitalWPF/view_relatorios/relatorios.xaml
+++ b/HospitalWPF/view_relatorios/relatorios.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_relatorios"
         mc:Ignorable="d"
-        Title="Relatórios" Height="300" Width="500">
-    <Grid>
-        <Button x:Name="btnRelatorioMedicos" Content="Relatório de Médicos" HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top" Width="180" Height="70" Click="btnRelatorioMedicos_Click" FontWeight="Bold" FontSize="13"/>
-        <Button x:Name="btnRelatorioConvenios" Content="Relatório de Convênios" HorizontalAlignment="Left" Margin="20,141,0,0" VerticalAlignment="Top"  Width="180" Height="70" FontSize="13" FontWeight="Bold" Click="btnRelatorioConvenios_Click"/>
+        Title="Relatórios" Height="300" Width="427">
+    <Grid Margin="0,0,2,0">
+        <Button x:Name="btnRelatorioMedicos" Content="Relatório de Médicos" HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top" Width="180" Height="70" Click="btnRelatorioMedicos_Click" FontSize="13"/>
+        <Button x:Name="btnRelatorioConvenios" Content="Relatório de Convênios" HorizontalAlignment="Left" Margin="20,141,0,0" VerticalAlignment="Top"  Width="180" Height="70" FontSize="13" Click="btnRelatorioConvenios_Click"/>
 
     </Grid>
 </Window>
