--- a/HospitalWPF/view_admin/agendamento/consultarAgendamentos.xaml
+++ b/HospitalWPF/view_admin/agendamento/consultarAgendamentos.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalWPF.view_admin.agendamento"
         mc:Ignorable="d"
-        Title="Agendamentos" Height="300" Width="534">
+        Title="Agendamentos" Height="300" Width="676.601">
     <Grid>
-        <DataGrid x:Name="gridObjetos" ItemsSource="{Binding Path=Objetos}" SelectedItem="{Binding Path=Objeto, Mode=TwoWay}" Margin="20,0,20,80"/>
-        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnCadastrar_Click"/>
-        <Button x:Name="btnAtualizar" Content="Atualizar" HorizontalAlignment="Left" Margin="160,0,0,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnAtualizar_Click"/>
+        <DataGrid x:Name="gridObjetos" ItemsSource="{Binding Path=Objetos}" SelectedItem="{Binding Path=Objeto, Mode=TwoWay}" Margin="20,20,20,80"/>
+        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="100" Height="50" Click="btnCadastrar_Click"/>
+        <Button x:Name="btnAtualizar" Content="Atualizar" HorizontalAlignment="Left" Margin="140,0,0,20" VerticalAlignment="Bottom" Width="100" Height="50" Click="btnAtualizar_Click"/>
+        <Button x:Name="btnDeletar" Content="Deletar" HorizontalAlignment="Left" Margin="260,0,0,20" VerticalAlignment="Bottom" Width="100" Height="50" Click="btnDeletar_Click"/>
         <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="120" Height="50" Click="btnVoltar_Click"/>
     </Grid>
 </Window>
