--- a/HospitalWPF/view_admin/areaAtuacao/consultarAreaAtuacao.xaml
+++ b/HospitalWPF/view_admin/areaAtuacao/consultarAreaAtuacao.xaml
@@ -7,9 +7,10 @@
         mc:Ignorable="d"
         Title="Consultar Áreas de Atuação" Height="340" Width="630">
     <Grid>
-        <DataGrid x:Name="gridObjetos" ItemsSource="{Binding Objetos}" SelectedItem="{Binding Path=Objeto, Mode=TwoWay}" Margin="17,0,24,80"/>
-        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="17,235,0,0" VerticalAlignment="Top" Width="102" Height="50" Click="btnCadastrar_Click"/>
-        <Button x:Name="btnAtualizar" Content="Atualizar" HorizontalAlignment="Left" Margin="136,235,0,0" VerticalAlignment="Top" Width="103" Height="50" Click="btnAtualizar_Click"/>
-        <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Right" Margin="0,235,24,0" VerticalAlignment="Top" Width="102" Height="50" Click="btnVoltar_Click"/>
+        <DataGrid x:Name="gridObjetos" ItemsSource="{Binding Objetos}" SelectedItem="{Binding Path=Objeto, Mode=TwoWay}" Margin="17,20,20,80"/>
+        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="20,235,0,0" VerticalAlignment="Top" Width="102" Height="50" Click="btnCadastrar_Click"/>
+        <Button x:Name="btnAtualizar" Content="Atualizar" HorizontalAlignment="Left" Margin="140,235,0,0" VerticalAlignment="Top" Width="103" Height="50" Click="btnAtualizar_Click"/>
+        <Button x:Name="btnDeletar" Content="Deletar" HorizontalAlignment="Left" Margin="260,235,0,0" VerticalAlignment="Top" Width="100" Height="50" Click="btnDeletar_Click"/>
+        <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Right" Margin="0,235,20,0" VerticalAlignment="Top" Width="102" Height="50" Click="btnVoltar_Click"/>
     </Grid>
 </Window>
